# ConfigLite

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  usage.py
.github/workflows/: lint-and-test.yml
configlite/: __init__.py  config.py
tests/: conftest.py  test_config.py  test_extra_methods.py  test_healing.py  test_init.py  test_paths.py  test_properties.py
